--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
     
        <ul>
       <li>
-        <a href="#">Inscrever-se no NLW</a>
+        <a href="https://br.linkedin.com/in/lucasbeck-" target="_blank"
+        >Minhas experiências</a>
       </li>
 
       <li>
-        <a href="#">Baixar meu e-book</a>
+        <a href="https://br.linkedin.com/in/lucasbeck-" target="_blank"
+        >Meu CV</a>
       </li>
 
       <li>
